cmake_minimum_required(VERSION 3.16)

set(QBP_BUILD_TYPE "STATIC" CACHE STRING "STATIC or SHARED Library build")

set(HAS_BUTTPLUG_CPP TRUE CACHE INTERNAL "")

set(QBP_VERSION_MAJOR 1)
set(QBP_VERSION_MINOR 0)
set(QBP_VERSION_PATCH 0)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)

if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "Default")
  set(QBP_DEBUG TRUE)
endif()

add_subdirectory("src/")
